# communitybikeways-events-ical

./: .pre-commit-config.yaml  dates.ical  dates.ics  pyproject.toml  requirements.txt  scrapy.cfg  test_order.py
.github/workflows/: scrape.yaml  test.yaml
communitybikeways/: exporters.py  items.py  middlewares.py  pipelines.py  settings.py
communitybikeways/spiders/: events.py
